# Shan

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: README.md  calc-web.shan  data.py  data.shan  fan-image-web.shan  fan_cipher.shan  fibonacci.py  fibonacci.shan  greet-web.shan  half_logic.py  half_logic.shan  hello-web.shan  hello.py  hello.shan  lights-web.shan  password-web.shan  score-web.shan  secrets.py  secrets.shan  solitaire-web.shan  todo-web.shan
examples/web/: README.md  app.css  gallery.html  gallery.js  index.html  load-app.js
scripts/: bootstrap-venv.sh
shan/: __init__.py  __main__.py  checker.py  compile.py  compile_expr.py  compile_web.py  compiled_support.py  expr.py  fan_cipher.py  fmt.py  form_parse.py  image_fan.py  img_cache.py  instagram.py  js_expr.py  locate.py  parser.py  runtime.py  security.py  serve.py  solitaire.py  stdlib_builtins.py  stego.py  theme.py  tls_dev.py  values.py  venv.py  viewer_app.py  web_ssr.py
shan/static/: shan-web.js
spec/: LANGUAGE.md  SECURITY.md  WEB.md
tests/: test_fan_cipher.py  test_image_fan.py  test_img_cache.py  test_instagram.py  test_security.py  test_solitaire.py  test_stego.py  test_theme.py  test_tooling.py  test_venv.py  test_web.py  test_web_ssr.py
viewer/: README.md  viewer.shan
viewer/samples/: article.css  article.html  colors.css  colors.html  common.css  fan-rooms.css  fan-rooms.html  flex-layout.css  flex-layout.html  forms.css  forms.html  gallery.css  grid-layout.css  grid-layout.html  half-value.css  index.html  (+12 more)
vscode-shan/: README.md  extension.js  package.json
(+12 files in other folders)
