[project]
name = "shan-lang"
version = "1.0.0"
description = "Shàn — quantum-fan secure language (HTML syntax, Python power)"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
viewer = ["tkinterweb>=3.24.0"]
dev = ["pytest>=7.0", "Pillow>=9.0"]
image = ["Pillow>=9.0"]

[project.scripts]
shan = "shan.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shan*"]
